--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Webpack React Boilerplate</title>
   </head>
   <body>
-    <div>Hello, webpack!</div>
+    <div id="react-root"></div>
   </body>
 </html>
